--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
+    "axios": "^1.6.8",
     "leaflet": "^1.9.4",
+    "moment": "^2.30.1",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-leaflet": "^4.2.1"
+    "react-globe.gl": "^2.27.2",
+    "react-leaflet": "^4.2.1",
+    "react-youtube": "^10.1.0"
   },
   "devDependencies": {
     "postcss": "^8",
